# spi_sd_card

./: Cargo.toml  README.md
.zed/: settings.json
src/: card_command.rs  disk.rs  dma.rs  lib.rs  structs.rs  util.rs
src/shared_spi_bus/: embassy.rs  mod.rs
