[package]
name = "spi_sd_card"
version = "0.1.0"
edition = "2024"

[dependencies]
bitfield = "0.19.4"
bitflags = "2.10.0"
chrono = { version = "0.4.42", default-features = false, optional = true }
crc = "3.4.0"
defmt = { version = "1.0.1", optional = true }
embassy-embedded-hal = "0.5.0"
embassy-sync = { version = "0.7.2", optional = true }
embassy-time = "0.5.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
num-traits = { version = "0.2.19", optional = true, default-features = false }

[features]
default = []
defmt = ["dep:defmt", "embassy-time/defmt"]
chrono = ["dep:chrono", "dep:num-traits"]
embassy-sync = ["dep:embassy-sync"]
